# lightTeX

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  bench_piecetable.cpp
cmake/: CompilerFlags.cmake  FetchTreeSitter.cmake
crates/ltx-app/: Cargo.toml  tauri.conf.json
crates/ltx-app/capabilities/: default.json
crates/ltx-app/icons/: icon.icns
crates/ltx-app/src/: commands.rs  lib.rs  main.rs  state.rs
crates/ltx-compiler/: Cargo.toml
crates/ltx-compiler/src/: engine.rs  lib.rs  log_parser.rs  pipeline.rs  synctex.rs
crates/ltx-core/: Cargo.toml
crates/ltx-core/benches/: rope_bench.rs
crates/ltx-core/src/: buffer.rs  document.rs  history.rs  lib.rs  selection.rs
crates/ltx-i18n/: Cargo.toml
crates/ltx-i18n/src/: lib.rs
crates/ltx-lsp/: Cargo.toml
crates/ltx-lsp/src/: lib.rs
crates/ltx-pdf/: Cargo.toml
crates/ltx-pdf/src/: cache.rs  lib.rs  renderer.rs
crates/ltx-plugin/: Cargo.toml
crates/ltx-plugin/src/: lib.rs
crates/ltx-shortcuts/: Cargo.toml
crates/ltx-shortcuts/src/: lib.rs
crates/ltx-snippets/: Cargo.toml
crates/ltx-snippets/src/: lib.rs
crates/ltx-syntax/: Cargo.toml  build.rs
crates/ltx-syntax/src/: highlighter.rs  lib.rs
crates/ltx-theme/: Cargo.toml
crates/ltx-theme/src/: lib.rs  theme.rs
crates/ltx-vim/: Cargo.toml
crates/ltx-vim/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/CommandPalette/: CommandPalette.tsx
frontend/src/components/Editor/: Editor.tsx
frontend/src/components/PdfViewer/: PdfViewer.tsx
frontend/src/components/StatusBar/: StatusBar.tsx
resources/: lighttex.qrc
snippets/: latex.toml
src/: main.cpp
src/app/: Actions.cpp  Actions.h  AppState.cpp  AppState.h
src/compiler/: Engine.cpp  Engine.h  LogParser.cpp  LogParser.h  Pipeline.cpp  Pipeline.h  SyncTeX.cpp  SyncTeX.h
src/core/: Document.cpp  Document.h  History.cpp  History.h  LineIndex.cpp  LineIndex.h  PieceTable.cpp  PieceTable.h  Selection.cpp  Selection.h
src/editor/: BracketMatcher.cpp  BracketMatcher.h  EditorWidget.cpp  EditorWidget.h  FindReplaceBar.cpp  FindReplaceBar.h  LineNumberArea.cpp  LineNumberArea.h
src/i18n/: I18n.h
src/lsp/: CompletionWidget.cpp  CompletionWidget.h  JsonRpc.h  Lsp.h  LspClient.cpp  LspTypes.h
src/pdf/: PageCache.cpp  PageCache.h  PdfRenderer.cpp  PdfRenderer.h  PdfWidget.cpp  PdfWidget.h
src/plugin/: Plugin.h
src/shortcuts/: Shortcuts.cpp  Shortcuts.h
src/snippets/: SnippetSession.cpp  SnippetSession.h  Snippets.cpp  Snippets.h
src/syntax/: Highlighter.cpp  Highlighter.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TokenKind.h  scanner_stubs.c
src/theme/: Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h
src/ui/: CommandPalette.cpp  CommandPalette.h  CompilePanel.cpp  CompilePanel.h  FileTreeWidget.cpp  FileTreeWidget.h  MainWindow.cpp  MainWindow.h  StatusBar.cpp  StatusBar.h
src/vim/: VimMode.h
tests/: CMakeLists.txt  test_autoindent.cpp  test_commandpalette.cpp  test_compilepanel.cpp  test_completionwidget.cpp  test_document.cpp  test_editorwidget.cpp  test_filetree.cpp  test_findreplace.cpp  test_highlighter.cpp  test_history.cpp  test_jsonrpc.cpp  test_logparser.cpp  test_lsptypes.cpp  test_pagecache.cpp  test_pdfrenderer.cpp  test_piecetable.cpp  test_selection.cpp  test_shortcuts.cpp  test_snippet_expansion.cpp  test_snippets.cpp  test_synctex.cpp  test_theme.cpp
tests/fixtures/documents/: simple.tex
tests/fixtures/themes/: malformed.toml  valid.toml
themes/: dark.toml  light.toml
