[workspace]
resolver = "2"
members = [
    "crates/ltx-core",
    "crates/ltx-syntax",
    "crates/ltx-compiler",
    "crates/ltx-pdf",
    "crates/ltx-lsp",
    "crates/ltx-vim",
    "crates/ltx-plugin",
    "crates/ltx-theme",
    "crates/ltx-i18n",
    "crates/ltx-snippets",
    "crates/ltx-shortcuts",
    "crates/ltx-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["lightTex contributors"]
repository = "https://github.com/lighttex/lighttex"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ropey = "1"
toml = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
