[package]
name = "ltx-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaTeX compilation pipeline, error parsing, and SyncTeX integration"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1"
