[package]
name = "ltx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core text buffer, selections, undo/redo, and document model for lightTex"

[dependencies]
ropey.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "rope_bench"
harness = false
