[package]
name = "ltx-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter based syntax highlighting for LaTeX and BibTeX"

[dependencies]
tree-sitter = "0.25"
tree-sitter-latex = "0.1"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
cc = "1"
